--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       rel="stylesheet"
     />
     <!-- My CSS link -->
-    <link rel="stylesheet" type="text/CSS" href="CSS/main.css" />
+    <link rel="stylesheet" type="text/css" href="css/main.css" />
   </head>
   <body>
     <!-- Navbar section -->
